--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ We’re also proud to support families using <strong>SNAP</strong> (EBT/Food Sta
   </div>
 </section>
 <section style="
-  background: url('spin us.png') center/contain no-repeat;
+  background: url('spin us.png') center/cover no-repeat;
   background-color: #fff2e6;
   padding: 120px 20px;
   text-align: center;
