--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ We’re also proud to support families using <strong>SNAP</strong> (EBT/Food Sta
 </p>
 
 <div style="text-align: center; margin-top: 30px;">
-  <a href="https://www.paypal.com/donate/?hosted_button_id=JGNZJ5MW6RBVG" target="_blank" style="
+  <a href="https://square.link/u/zVDvdNQa" style="
     display: inline-block;
     background: #e12c2c;
     color: white;
