--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@ We’re also proud to support families using <strong>SNAP</strong> (EBT/Food Sta
 </a>
   <section style="background-color: #fff2e6; padding: 60px 20px; text-align: center;">
   <h2 style="color: #e12c2c; font-size: 2em; margin-bottom: 20px;">📍 Visit Us</h2>
-  <p style="font-size: 1.1em; margin-bottom: 10px;">🕙 <strong>Open Daily: 10:00 AM – 10:00 PM</strong></p>
+  <p style="font-size: 1.1em; margin-bottom: 10px;">🕙 <strong>COMING SOON!</strong></p>
   <p style="font-size: 1.1em; margin-bottom: 10px;">📞 <strong>(217) 316-0755</strong></p>
-  <p style="font-size: 1.1em;">📬 <strong>Coming Soon!, 626 Maine Street Quincy, IL 62301</strong>  
+  <p style="font-size: 1.1em;">📬 <strong>626 Maine Street Quincy, IL 62301</strong>  
  
   </p>
 </section>
