--- a/menu.html
+++ b/menu.html
@@ -124,8 +124,8 @@
 
   <!-- Menu Images -->
   <section class="menu-section">
-    <img src="SPINCY WRAPS (1).jpg" alt="Spincy Menu Page 1">
-    <img src="SPINCY WRAPS (2).png" alt="Spincy Menu Page 2">
+    <img src="SPINCY WRAPS.png" alt="Spincy Menu Page 1">
+    <img src="SPINCY WRAPS (1).png" alt="Spincy Menu Page 2">
 
     <!-- Order Button -->
     <a href="https://spincy.square.site/?location_id=L8X4J77NK1D66&fulfillment=PICKUP#PRZAIJMQIVNLQDVPMDREEO3B"
