--- a/menu.html
+++ b/menu.html
@@ -131,7 +131,7 @@
     <a href="https://spincy.square.site/?location_id=L8X4J77NK1D66&fulfillment=PICKUP#PRZAIJMQIVNLQDVPMDREEO3B"
        target="_blank"
        class="order-button">
-       ✅ Order Online (Square)
+       ✅ Order Online (COMING SOON)
     </a>
 
     <p class="order-note">
