--- a/catering.html
+++ b/catering.html
@@ -1,204 +1,147 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Catering – Spincy Quincy | Order Döner Wraps for Your Event</title>
-<meta name="description" content="Spincy offers catering for events, parties, and offices in Quincy, IL. Treat your guests to delicious Turkish-style chicken döner wraps and sides.">
-<meta name="keywords" content="Spincy catering, food catering Quincy, döner event catering, fast food catering IL, party food Quincy">
+<!-- =========================
+     SPINCY CATERING SECTION
+========================= -->
+<section style="max-width: 1000px; margin: 60px auto; padding: 0 20px;">
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Spincy | Catering & Contact</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: Arial, sans-serif;
-      background: url('https://images.unsplash.com/photo-1606788075761-1f618df7d4db?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat fixed;
-      color: #333;
-    }
+  <div style="background:#ffffff; border-radius:18px; padding:30px; box-shadow:0 10px 28px rgba(0,0,0,0.08);">
 
-    nav {
-      background: transparent;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: static;
-      top: 0;
-      z-index: 1000;
-    }
+    <h2 style="font-size:2.2rem; margin-bottom:12px; color:#111;">
+      🍗 Spincy Catering
+    </h2>
 
-    nav img {
-      height: 100px;
-    }
+    <p style="font-size:1.08rem; line-height:1.7; color:#333; margin-bottom:18px;">
+      Bring bold flavor to your next event with flame-grilled chicken döner, fresh toppings, and our signature Spincy Sauce.
+    </p>
 
-    nav a {
-      color: red;
-      text-decoration: none;
-      margin-left: 20px;
-      font-weight: bold;
-      font-size: 1.1em;
-      text-shadow: 1px 1px 1px transparent;
-    }
+    <p style="font-size:1.05rem; line-height:1.7; color:#333; margin-bottom:18px;">
+      <b>Perfect for:</b><br>
+      • Office lunches<br>
+      • School events<br>
+      • Sports teams<br>
+      • Birthday parties<br>
+      • Family gatherings<br>
+      • Corporate meetings
+    </p>
 
-    header {
-      background: url('Wrapp.png') center/cover no-repeat;
-      color: white;
-      padding: 100px 20px;
-      text-align: center;
-    }
+    <p style="font-size:1.05rem; line-height:1.7; color:#333; margin-bottom:28px;">
+      <b>Pickup catering available in Quincy, Illinois.</b>
+    </p>
 
-    header h1 {
-      font-size: 3em;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
-      background-color: rgba(0, 0, 0, 0.5);
-      display: inline-block;
-      padding: 20px 40px;
-      border-radius: 10px;
-    }
+    <hr style="border:none; border-top:2px solid #f0f0f0; margin:26px 0;">
 
-    .container {
-      max-width: 900px;
-      margin: 60px auto;
-      background-color: rgba(255, 255, 255, 0.92);
-      border-radius: 12px;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.2);
-      padding: 60px 20px;
-    }
+    <h3 style="font-size:1.7rem; margin-bottom:12px; color:#111;">
+      💰 Catering Pricing (Pickup Only)
+    </h3>
 
-    .content-box {
-      padding: 40px 30px;
-      border-radius: 10px;
-      text-align: center;
-    }
+    <p style="font-size:1.05rem; line-height:1.7; color:#333; margin-bottom:18px;">
+      All pricing is based on <b>cooked chicken weight</b>.
+    </p>
 
-    h1, h2 {
-      color: #e12c2c;
-    }
+    <div style="display:grid; gap:12px; margin-bottom:18px;">
+      <div style="padding:14px 16px; border-radius:14px; background:#fff8f0; border:1px solid #ffe1d2;">
+        <b>🔥 1 lb (16 oz) — $20</b><br>
+        <span style="color:#444;">Great for small groups.</span>
+      </div>
 
-    .divider {
-      width: 80px;
-      height: 5px;
-      background: #e12c2c;
-      margin: 20px auto;
-      border-radius: 5px;
-    }
+      <div style="padding:14px 16px; border-radius:14px; background:#fff8f0; border:1px solid #ffe1d2;">
+        <b>🔥 10 lb — $180</b><br>
+        <span style="color:#444;">Ideal for parties and team meals.</span>
+      </div>
 
-    p {
-      font-size: 1.1em;
-      color: #333;
-      margin-bottom: 20px;
-    }
+      <div style="padding:14px 16px; border-radius:14px; background:#fff8f0; border:1px solid #ffe1d2;">
+        <b>🔥 50 lb — $800</b><br>
+        <span style="color:#444;">Best value bulk package.</span>
+      </div>
 
-    form {
-      margin-top: 30px;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 15px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 1em;
-    }
-
-    button {
-      background: #e12c2c;
-      color: white;
-      padding: 14px 30px;
-      border: none;
-      border-radius: 6px;
-      font-size: 1em;
-      cursor: pointer;
-    }
-
-    footer {
-      background: #222;
-      color: #eee;
-      text-align: center;
-      padding: 20px;
-      margin-top: 60px;
-    }
-  </style>
-</head>
-<body>
-
-  <nav>
-    <a href="index.html">
-      <img src="spincy logo.png" alt="Spincy Logo">
-    </a>
-    <div>
-      <a href="index.html#home">Home</a>
-      <a href="index.html#about">About</a>
-      <a href="menu.html">Menu</a>
-      <a href="catering.html">Catering & Contact</a>
+      <div style="padding:14px 16px; border-radius:14px; background:#fff8f0; border:1px solid #ffe1d2;">
+        <b>🔥 50+ lb — Custom Pricing</b><br>
+        <span style="color:#444;">Contact us directly for special large-event rates.</span>
+      </div>
     </div>
-  </nav>
 
-  
+    <p style="font-size:0.98rem; color:#555; margin-bottom:26px;">
+      Bulk discounts apply for high-volume orders.
+    </p>
 
-  <div class="container">
-    <div class="content-box">
-      <h2>We Cater Events!</h2>
-      <div class="divider"></div>
-      <p>Bring the taste of Spincy to your next event — office lunch, birthday, family gathering, or community party.</p>
-      <p>No fixed pricing — we tailor every order to your needs and budget. Reach out and let us help make your event flavorful and stress-free!</p>
+    <hr style="border:none; border-top:2px solid #f0f0f0; margin:26px 0;">
 
-      <form action="https://formspree.io/f/mvgrqepy" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Tell us about your event..." required></textarea>
-        <button type="submit">📩 Send Request</button>
-      </form>
->
+    <h3 style="font-size:1.7rem; margin-bottom:12px; color:#111;">
+      ✅ Included With Every Catering Order
+    </h3>
+
+    <p style="font-size:1.05rem; line-height:1.8; color:#333; margin-bottom:18px;">
+      • Flame-grilled chicken döner<br>
+      • Signature Spincy Sauce<br>
+      • Fresh toppings:<br>
+      &nbsp;&nbsp;– Mozzarella cheese<br>
+      &nbsp;&nbsp;– Lettuce<br>
+      &nbsp;&nbsp;– Onion<br>
+      &nbsp;&nbsp;– Tomato<br>
+      &nbsp;&nbsp;– Pickle<br>
+      • Small taco burrito (lavash) for serving
+    </p>
+
+    <div style="background:#fff3f3; border:1px solid #ffd0d0; padding:14px 16px; border-radius:14px; margin-bottom:24px;">
+      <b style="color:#c42121;">⚠️ Important:</b>
+      <span style="color:#333;"> Sides and drinks are <b>NOT included</b> in catering pricing.</span><br>
+      <span style="color:#555;">Rice, fries, chips, fountain drinks, and sweets may be added separately upon request.</span>
     </div>
+
+    <hr style="border:none; border-top:2px solid #f0f0f0; margin:26px 0;">
+
+    <h3 style="font-size:1.7rem; margin-bottom:12px; color:#111;">
+      ⭐ Why Choose Spincy Catering?
+    </h3>
+
+    <p style="font-size:1.05rem; line-height:1.8; color:#333; margin-bottom:18px;">
+      ✔ Freshly prepared chicken, never pre-packaged<br>
+      ✔ Bold, authentic flavor with American-friendly options<br>
+      ✔ Clean, professional packaging<br>
+      ✔ Simple bulk pricing — no hidden fees<br>
+      ✔ Fast response and reliable pickup times
+    </p>
+
+    <p style="font-size:1.05rem; line-height:1.8; color:#333; margin-bottom:22px;">
+      We treat every order like it’s for our own family.
+    </p>
+
+    <hr style="border:none; border-top:2px solid #f0f0f0; margin:26px 0;">
+
+    <h3 style="font-size:1.7rem; margin-bottom:12px; color:#111;">
+      🚚 Pickup & Ordering Policy
+    </h3>
+
+    <p style="font-size:1.05rem; line-height:1.8; color:#333; margin-bottom:18px;">
+      • Pickup catering only (delivery may be available for large orders — ask us)<br>
+      • Please place orders <b>24–48 hours</b> in advance<br>
+      • Same-day orders may be possible depending on availability<br>
+      • Large orders (25 lb+) require confirmation
+    </p>
+
+    <hr style="border:none; border-top:2px solid #f0f0f0; margin:26px 0;">
+
+    <h3 style="font-size:1.7rem; margin-bottom:12px; color:#111;">
+      📞 Place Your Catering Order
+    </h3>
+
+    <p style="font-size:1.08rem; line-height:1.8; color:#333; margin-bottom:14px;">
+      Ready to book your event? Contact us and we’ll confirm your pickup time and details.
+    </p>
+
+    <div style="display:flex; gap:12px; flex-wrap:wrap; margin-top:10px;">
+      <a href="mailto:spincyquincy@gmail.com?subject=Spincy%20Catering%20Request"
+         style="display:inline-block; background:#222; color:#fff; text-decoration:none; padding:12px 18px; border-radius:10px; font-weight:bold;">
+        ✉️ Email: spincyquincy@gmail.com
+      </a>
+
+      <a href="tel:12173160755"
+         style="display:inline-block; background:#e12c2c; color:#fff; text-decoration:none; padding:12px 18px; border-radius:10px; font-weight:bold;">
+        📱 Call/Text: 217-316-07-55
+      </a>
+    </div>
+
   </div>
-
-  <!-- SPIN US SOCIAL SECTION -->
-  <section style="
-    background: url('spin us.png') center/contain no-repeat;
-    background-color: #fff2e6;
-    padding: 120px 20px;
-    text-align: center;
-    color: white;
-    position: relative;
-    min-height: 500px;
-  ">
-    <a href="https://www.doordash.com/store/spincy-quincy" target="_blank" style="
-      position: absolute;
-      top: 30px;
-      left: 30px;
-    ">
-      <img src="doordash.jfif" alt="DoorDash" style="width: 65px; height: 65px;">
-    </a>
-
-    <a href="https://www.facebook.com/spincyquincy" target="_blank" style="position: absolute; top: 20px; right: 20px;">
-      <img src="facebook.jpg" alt="Facebook" style="height: 60px;">
-    </a>
-
-    <a href="https://www.instagram.com/spincyquincy" target="_blank" style="
-      position: absolute;
-      bottom: 40px;
-      left: 40px;
-    ">
-      <img src="instagram.png" alt="Instagram" style="width: 70px; height: 70px;">
-    </a>
-
-    <a href="mailto:spincyquincy@gmail.com" style="
-      position: absolute;
-      bottom: 40px;
-      right: 40px;
-    ">
-      <img src="email.jpg" alt="Email" style="width: 70px; height: 70px;">
-    </a>
-  </section>
-
-  <footer>
-    &copy; 2025 Spincy Quincy. All rights reserved.
-  </footer>
-
-</body>
-</html>
+</section>
+<!-- =========================
+   END SPINCY CATERING SECTION
+========================= -->
