--- a/catering.html
+++ b/catering.html
@@ -1,3 +1,19 @@
+<!-- Navigation -->
+<nav style="display:flex; justify-content:space-between; align-items:center; padding:10px 30px; background:#e12c2c;">
+  
+  <a href="index.html">
+    <img src="spincy logo.png" alt="Spincy Logo" style="height:100px;">
+  </a>
+
+  <div>
+    <a href="index.html#home" style="color:white; text-decoration:none; margin-left:25px; font-size:1.2em; font-weight:bold;">Home</a>
+    <a href="index.html#about" style="color:white; text-decoration:none; margin-left:25px; font-size:1.2em; font-weight:bold;">About</a>
+    <a href="menu.html" style="color:white; text-decoration:none; margin-left:25px; font-size:1.2em; font-weight:bold;">Menu</a>
+    <a href="catering.html" style="color:white; text-decoration:none; margin-left:25px; font-size:1.2em; font-weight:bold;">Catering</a>
+  </div>
+
+</nav>
+
 <!-- =========================
      SPINCY CATERING SECTION
 ========================= -->
